# pichamu

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pubspec.yaml
android/: build.gradle
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/pichamu/: MainActivity.kt
android/gradle/wrapper/: gradle-wrapper.properties
docs/: Windows常用命令.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
linux/: CMakeLists.txt  my_application.cc
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml  build.rs
native/src/: api.rs  frb_generated.rs  lib.rs
pichamu_core/: Cargo.toml
pichamu_core/src/: api.rs  lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
