[workspace]
resolver = "2"

members = [
    "pichamu_core",
    "native",
]

[workspace.dependencies]
# 图像处理
image = "0.25"
image_hasher = "3.0"

# 数据库
rusqlite = { version = "0.32", default-features = false }

# 异步运行时
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# 网络请求
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 错误处理
anyhow = "1.0"
thiserror = "2.0.16"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 作业系统相关依赖
apalis = "0.6"
apalis-sql = { version = "0.6", features = ["sqlite", "tokio"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

# Rust ↔ Flutter 桥接
flutter_rust_bridge = "2.5"

# 测试 & 基准
criterion = "0.5"
tempfile = "3.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
