[package]
name = "pichamu_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# 继承 workspace 的依赖
image = { workspace = true }
image_hasher = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
apalis = { workspace = true }
apalis-sql = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
flutter_rust_bridge = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tokio-test = { workspace = true }
